# personal-kb-lib

./: .gitignore  README.md  WIKI_SCHEMA.md  claude.md  local.env.example  mcp_config.example.json  pyproject.toml
conductor/: karpathy-wiki-plan.md
kb_data/markdown/: a_p001.md  b_p001.md  deep_learning_p001.md  deep_learning_p002.md  deep_learning_p003.md  deep_learning_p004.md  deep_learning_p005.md  deep_learning_p006.md  deep_learning_p007.md  deep_learning_p008.md  deep_learning_p009.md  deep_learning_p010.md  deep_learning_p011.md  deep_learning_p012.md  deep_learning_p013.md  deep_learning_p014.md  deep_learning_p015.md  deep_learning_p016.md  doc_p001.md  file_p001.md  note_p001.md
ocr_kb/: __init__.py  cli.py  mcp_server.py  monitoring.py  pipeline.py  prompts.py  settings.py
ocr_kb/ingest/: batch_builder.py  docling_reader.py  image_reader.py  loader.py  marker_reader.py  metadata_extractor.py  pdf_reader.py  pdftext_reader.py  pymupdf4llm_reader.py  surya_reader.py
ocr_kb/kb/: __init__.py  exporter.py  indexer.py  ingestion.py  schema.py  store.py
ocr_kb/model/: __init__.py  embedder.py  gemma_backend.py  glm_ocr_backend.py  schema.py
ocr_kb/postprocess/: __init__.py  html_parser.py  image_extractor.py  layout_parser.py  markdown_converter.py
ocr_kb/wiki/: compiler.py  linter.py
tests/: test_cli.py  test_ingest.py  test_kb.py  test_model_client.py  test_monitoring.py  test_pipeline.py  test_postprocess.py  test_prompts.py  test_scaffold.py  test_settings.py
