[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr_kb"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pypdfium2>=4.0",
    "pymupdf4llm>=0.0.17",
    "Pillow>=10.0",
    "pydantic-settings>=2.0",
    "beautifulsoup4>=4.12",
    "markdownify>=0.11",
    "sqlite-utils>=3.35",
    "sentence-transformers>=2.2",
    "typer>=0.12",
    "rich>=13.0",
    "watchdog>=3.0",
    "filetype>=1.2",
    "python-dotenv>=1.0",
    "mcp>=1.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
ocr-kb = "ocr_kb.cli:app"
ocr-kb-mcp = "ocr_kb.mcp_server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["ocr_kb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
